syntax = "proto3";

import "github.com/go-iot-platform/rbac/proto/calling/message.proto";
import "github.com/micro/go-micro/api/proto/api.proto";

service NotificationSvc {
  // send notification request to call & sms
  rpc Create(Request) returns(Response) { }
  rpc CreateWithNotify(NotifyRequest) returns(Response) { }
  rpc GetNotification(GetNotificationRequest) returns(GetNotificationResponse) { }
  rpc GetNotificationAPI (go.api.Request) returns (go.api.Response);
}
message NotifyRequest{
  Thing thing = 1;
  Thing gateway = 2;
  Thing template = 3;
  Thing zone = 4;
  string customerNumber =5;

  // notification type are below
  // DoorSensor
	// MotionSensor
	// SecurityBreach
	// SafetyBreachCO
	// SafetyBreachSOS
	// SafetyBreachSmoke
	// SecurityAlarm
	// SafetyAlarm
  int32 type =6;
  string value=7;
  string macAddress =8; //real gateway?
  ClientConfig clientConfig = 9;
  string email = 10;
}
message Request{
  Thing thing = 1;
  Thing gateway = 2;
  Thing template = 3;
  Thing zone = 4;
  string customerNumber =5;
  string macAddress =8; //real gateway?

  // notification type are below
  // DoorSensor
	// MotionSensor
	// SecurityBreach
	// SafetyBreachCO
	// SafetyBreachSOS
	// SafetyBreachSmoke
	// SecurityAlarm
	// SafetyAlarm
  int32 type =6;
  string value=7;
}

message GetNotificationRequest{
 int32 count = 1;
 string serial =2;
}
message GetNotificationResponse{
  bool success =1;
  string errorMessage =2;
 repeated  NotificationResult data=3;
}

message NotificationResult {
  int32 id =1;
  string thingName=2;
  string thingSerial=3;
  string thingDisplayName=4;
  string gatewayName=5;
  string gatewayDisplayName=6;
  string gatewayMacAddress=7;
  string zoneName =8;
  string zoneDisplayName =9;
  int32 status =10;
  int32 type =11;
  string template = 12;
  int32 state = 13;
  string Description =14;
  string descriptionVN=15;
  int32 AlertType =16;
  string DateTime=17;
  int32 Acknowledged=18;
  int32 AlertStatus=19;
  int32 DeviceId=20;

}