syntax = "proto3";

import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";

service AuthenSvc {
	rpc GetCustomer(CustomerRequest) returns (CustomerResponse) {}
	rpc GetObserver(CustomerRequest) returns (CustomerResponse) {}
	rpc GetCustomerByEmail(CustomerByUserNameRequest) returns (CustomerResponse) {}
	rpc VerifyPermission(VerifyPermissionRequest) returns (VerifyPermissionResponse) {}
    rpc CountCustomer (google.protobuf.Empty) returns (google.protobuf.Int64Value);
	//rpc VerifyPermissionFromContext(VerifyPermissionRequest) returns (VerifyPermissionResponse) {}
	rpc GetDeviceToken(CustomerRequest) returns (DeviceTokenResponse) {}
}
message EmptyRequest {
}
message CustomerRequest {
	string customerNumber = 1;
}
message CustomerByUserNameRequest{
	string userName = 1;
}
message CustomerResponse {
	string customerNumber = 1;
	string alias = 2;
	string mobile = 3;
	string firstName = 4;
	string lastName = 5;
	string address1 = 6;
	string address2 = 7;
	string email = 8;
	CustomerSetting setting = 9;
}

message CustomerSetting {
	int32 id =1;
	bool isAllowRegister=2;
	SMTPConfig smtp =3;
	PaymentConfig payment=4;
	string other =5;
}
message SMTPConfig{
	string host =1;
	int32 port =2;
	string password =3;
	string account =4;
}
message PaymentConfig {

}
message VerifyPermissionRequest{
	string action = 1;
	repeated string compareResources = 2;
}
message VerifyPermissionResponse{
	repeated string resources = 1;
	bool success = 2;
	AuthUser authUser = 3;
}
message AuthUser {
	int32 id =1;
	int32 customerID =2;
	string customerNumber = 3;
	repeated string clients = 4;
	string username = 5;
	string userUuid=6;
}
message DeviceTokenResponse {
	string customer_number=1;
	repeated DeviceToken devices =2;
}
message DeviceToken {
	int32 user_id=1;
	string ip=2;
	string location=3;
	string lat=4;
	string long=5;
	bool active =6;
	bool is_main_device=7;
	string device_token=8;
	int32 device_type=9;
}